--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }*/
 
 body {
-    background-color: wheat;
+    background-color: rgb(179, 245, 240) ;
     color: #0f1e19;
 
 font-size: 16px;
@@ -19,7 +19,7 @@ font-family: 'Roboto', sans-serif;
 }
 
 a {
-    color: rgb(179, 245, 240);
+    color: rgb(105, 27, 27);
     text-decoration: none;
 }
 
